# claude-question

./: .gitignore  CLAUDE.md  Cargo.toml  ENTIRE_CLAUDE_TRACKING.md  README.md  UI_DESIGN.md  install.sh  uninstall.sh
claude-track/: Cargo.toml
claude-track/src/: main.rs
claude-track/src/commands/: hook.rs  query.rs  stats.rs
dashboard/: db.sqlite3  pyproject.toml
dashboard/dashboard/: router.py  settings.py
dashboard/tracking/: admin.py  models.py
docs/: DUCKDB_SESSION_ANALYSIS.md
hooks/: track-tool-usage.sh  view-tool-stats.sh
src/: db.rs  main.rs  models.rs
src/commands/: backfill.rs  hook.rs  install.rs  log.rs  migrate.rs  mod.rs  query.rs  stats.rs  uninstall.rs
terraform/: main.tf
tests/: integration.rs
